--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,20 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
-        // Enabling multidex support.
-        multiDexEnabled true
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'buildsystem/dependencies.gradle'
+buildscript {
+    apply from: 'buildsystem/dependencies.gradle'
+    repositories {
+        jcenter()
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile libraries.multidex
-    compile project(':vegarequest')
-    compile project(':VegaRecyclerView')
-    compile libraries.butterknife
-    compile libraries.eventbus
-    compile libraries.picasso
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+allprojects {
+    repositories {
+
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
 }
